// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyBookingHistory > matches snapshot for admin variant 1`] = `
<section
  aria-describedby="_r_10_-description"
  aria-labelledby="_r_10_-title"
  class="flex flex-col items-center justify-center gap-6 px-4 py-12 sm:px-6 sm:py-16 md:py-20 text-center"
>
  <div
    class="flex w-full max-w-sm justify-center"
  >
    <svg
      aria-label="Dashboard chart with empty data - no booking activity to display"
      class="h-[134px] w-[160px] sm:h-[168px] sm:w-[200px] md:h-[200px] md:w-[240px]"
      height="134"
      role="img"
      viewBox="0 0 240 200"
      width="160"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <lineargradient
          id="admin-gradient"
          x1="0%"
          x2="0%"
          y1="0%"
          y2="100%"
        >
          <stop
            class="dark:stop-color-[var(--illus-color-admin-grad-start)]"
            offset="0%"
            stop-color="#8b5cf6"
            stop-opacity="0.05"
          />
          <stop
            class="dark:stop-color-[var(--illus-color-admin-grad-end)]"
            offset="100%"
            stop-color="#8b5cf6"
            stop-opacity="0.02"
          />
        </lineargradient>
      </defs>
      <rect
        class="dark:fill-[var(--illus-surface-dark)]"
        fill="#f0f5fb"
        height="200"
        rx="12"
        width="240"
      />
      <rect
        fill="url(#admin-gradient)"
        height="200"
        rx="12"
        width="240"
      />
      <rect
        class="dark:stroke-[var(--illus-accent-dark-admin)]"
        fill="none"
        height="130"
        opacity="0.6"
        rx="8"
        stroke="#8b5cf6"
        stroke-width="1.5"
        width="180"
        x="30"
        y="35"
      />
      <rect
        class="dark:fill-[var(--illus-accent-dark-admin)]"
        fill="#8b5cf6"
        height="20"
        opacity="0.1"
        rx="7"
        width="180"
        x="30"
        y="35"
      />
      <text
        class="dark:fill-[var(--illus-text-secondary-dark)]"
        fill="#4a6080"
        font-size="10"
        font-weight="600"
        opacity="0.7"
        x="40"
        y="50"
      >
        Bookings Overview
      </text>
      <g>
        <g>
          <text
            class="dark:fill-[var(--illus-text-secondary-dark)]"
            fill="#4a6080"
            font-size="8"
            opacity="0.4"
            text-anchor="end"
            x="35"
            y="130"
          >
            0
          </text>
        </g>
        <g>
          <text
            class="dark:fill-[var(--illus-text-secondary-dark)]"
            fill="#4a6080"
            font-size="8"
            opacity="0.4"
            text-anchor="end"
            x="35"
            y="112"
          >
            25
          </text>
        </g>
        <g>
          <text
            class="dark:fill-[var(--illus-text-secondary-dark)]"
            fill="#4a6080"
            font-size="8"
            opacity="0.4"
            text-anchor="end"
            x="35"
            y="94"
          >
            50
          </text>
        </g>
        <g>
          <text
            class="dark:fill-[var(--illus-text-secondary-dark)]"
            fill="#4a6080"
            font-size="8"
            opacity="0.4"
            text-anchor="end"
            x="35"
            y="76"
          >
            75
          </text>
        </g>
        <g>
          <text
            class="dark:fill-[var(--illus-text-secondary-dark)]"
            fill="#4a6080"
            font-size="8"
            opacity="0.4"
            text-anchor="end"
            x="35"
            y="58"
          >
            100
          </text>
        </g>
        <line
          class="dark:stroke-[var(--illus-accent-dark-admin)]"
          opacity="0.15"
          stroke="#8b5cf6"
          stroke-dasharray="2,2"
          stroke-width="0.5"
          x1="45"
          x2="200"
          y1="112"
          y2="112"
        />
        <line
          class="dark:stroke-[var(--illus-accent-dark-admin)]"
          opacity="0.15"
          stroke="#8b5cf6"
          stroke-dasharray="2,2"
          stroke-width="0.5"
          x1="45"
          x2="200"
          y1="94"
          y2="94"
        />
        <line
          class="dark:stroke-[var(--illus-accent-dark-admin)]"
          opacity="0.15"
          stroke="#8b5cf6"
          stroke-dasharray="2,2"
          stroke-width="0.5"
          x1="45"
          x2="200"
          y1="76"
          y2="76"
        />
        <line
          class="dark:stroke-[var(--illus-accent-dark-admin)]"
          opacity="0.15"
          stroke="#8b5cf6"
          stroke-dasharray="2,2"
          stroke-width="0.5"
          x1="45"
          x2="200"
          y1="58"
          y2="58"
        />
      </g>
      <line
        class="dark:stroke-[var(--illus-accent-dark-admin)]"
        opacity="0.4"
        stroke="#8b5cf6"
        stroke-width="1"
        x1="45"
        x2="200"
        y1="130"
        y2="130"
      />
      <line
        class="dark:stroke-[var(--illus-accent-dark-admin)]"
        opacity="0.4"
        stroke="#8b5cf6"
        stroke-width="1"
        x1="45"
        x2="45"
        y1="60"
        y2="130"
      />
      <g>
        <g>
          <rect
            class="dark:stroke-[var(--illus-secondary-dark)]"
            fill="none"
            height="4"
            opacity="0.3"
            rx="1"
            stroke="#0891b2"
            stroke-width="1"
            width="18"
            x="55"
            y="128"
          />
          <line
            class="dark:stroke-[var(--illus-secondary-dark)]"
            opacity="0.5"
            stroke="#0891b2"
            stroke-linecap="round"
            stroke-width="1.5"
            x1="55"
            x2="73"
            y1="130"
            y2="130"
          />
        </g>
        <g>
          <rect
            class="dark:stroke-[var(--illus-secondary-dark)]"
            fill="none"
            height="4"
            opacity="0.3"
            rx="1"
            stroke="#0891b2"
            stroke-width="1"
            width="18"
            x="82"
            y="128"
          />
          <line
            class="dark:stroke-[var(--illus-secondary-dark)]"
            opacity="0.5"
            stroke="#0891b2"
            stroke-linecap="round"
            stroke-width="1.5"
            x1="82"
            x2="100"
            y1="130"
            y2="130"
          />
        </g>
        <g>
          <rect
            class="dark:stroke-[var(--illus-secondary-dark)]"
            fill="none"
            height="4"
            opacity="0.3"
            rx="1"
            stroke="#0891b2"
            stroke-width="1"
            width="18"
            x="109"
            y="128"
          />
          <line
            class="dark:stroke-[var(--illus-secondary-dark)]"
            opacity="0.5"
            stroke="#0891b2"
            stroke-linecap="round"
            stroke-width="1.5"
            x1="109"
            x2="127"
            y1="130"
            y2="130"
          />
        </g>
        <g>
          <rect
            class="dark:stroke-[var(--illus-secondary-dark)]"
            fill="none"
            height="4"
            opacity="0.3"
            rx="1"
            stroke="#0891b2"
            stroke-width="1"
            width="18"
            x="136"
            y="128"
          />
          <line
            class="dark:stroke-[var(--illus-secondary-dark)]"
            opacity="0.5"
            stroke="#0891b2"
            stroke-linecap="round"
            stroke-width="1.5"
            x1="136"
            x2="154"
            y1="130"
            y2="130"
          />
        </g>
        <g>
          <rect
            class="dark:stroke-[var(--illus-secondary-dark)]"
            fill="none"
            height="4"
            opacity="0.3"
            rx="1"
            stroke="#0891b2"
            stroke-width="1"
            width="18"
            x="163"
            y="128"
          />
          <line
            class="dark:stroke-[var(--illus-secondary-dark)]"
            opacity="0.5"
            stroke="#0891b2"
            stroke-linecap="round"
            stroke-width="1.5"
            x1="163"
            x2="181"
            y1="130"
            y2="130"
          />
        </g>
      </g>
      <g
        transform="translate(120, 85)"
      >
        <circle
          class="dark:stroke-[var(--illus-secondary-dark)]"
          cx="0"
          cy="0"
          fill="none"
          opacity="0.4"
          r="10"
          stroke="#0891b2"
          stroke-width="1.5"
        />
        <line
          class="dark:stroke-[var(--illus-secondary-dark)]"
          opacity="0.4"
          stroke="#0891b2"
          stroke-linecap="round"
          stroke-width="1"
          x1="-5"
          x2="5"
          y1="0"
          y2="0"
        />
      </g>
      <g
        transform="translate(50, 155)"
      >
        <rect
          class="dark:stroke-[var(--illus-accent-dark-admin)]"
          fill="none"
          height="6"
          opacity="0.3"
          rx="1"
          stroke="#8b5cf6"
          stroke-width="1"
          width="6"
          x="0"
          y="0"
        />
        <text
          class="dark:fill-[var(--illus-text-secondary-dark)]"
          fill="#4a6080"
          font-size="8"
          opacity="0.4"
          x="12"
          y="5"
        >
          Pending
        </text>
        <rect
          class="dark:stroke-[var(--illus-secondary-dark)]"
          fill="none"
          height="6"
          opacity="0.3"
          rx="1"
          stroke="#0891b2"
          stroke-width="1"
          width="6"
          x="80"
          y="0"
        />
        <text
          class="dark:fill-[var(--illus-text-secondary-dark)]"
          fill="#4a6080"
          font-size="8"
          opacity="0.4"
          x="92"
          y="5"
        >
          Completed
        </text>
      </g>
    </svg>
  </div>
  <div
    class="flex max-w-md flex-col gap-3 sm:gap-4"
  >
    <h2
      class="text-lg font-semibold sm:text-xl text-foreground dark:text-foreground"
      id="_r_10_-title"
    >
      No Booking Activity
    </h2>
    <p
      class="text-sm sm:text-base leading-relaxed text-muted dark:text-muted"
      id="_r_10_-description"
    >
      Booking analytics and activity will display here once bookings are made.
    </p>
  </div>
</section>
`;

exports[`EmptyBookingHistory > matches snapshot for buyer variant 1`] = `
<section
  aria-describedby="_r_u_-description"
  aria-labelledby="_r_u_-title"
  class="flex flex-col items-center justify-center gap-6 px-4 py-12 sm:px-6 sm:py-16 md:py-20 text-center"
>
  <div
    class="flex w-full max-w-sm justify-center"
  >
    <svg
      aria-label="Calendar with empty booking slots - no bookings made yet"
      class="h-[134px] w-[160px] sm:h-[168px] sm:w-[200px] md:h-[200px] md:w-[240px]"
      height="134"
      role="img"
      viewBox="0 0 240 200"
      width="160"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <lineargradient
          id="buyer-gradient"
          x1="0%"
          x2="0%"
          y1="0%"
          y2="100%"
        >
          <stop
            class="dark:stop-color-[var(--illus-color-buyer-grad-start)]"
            offset="0%"
            stop-color="#06b6d4"
            stop-opacity="0.05"
          />
          <stop
            class="dark:stop-color-[var(--illus-color-buyer-grad-end)]"
            offset="100%"
            stop-color="#06b6d4"
            stop-opacity="0.02"
          />
        </lineargradient>
      </defs>
      <rect
        class="dark:fill-[var(--illus-surface-dark)]"
        fill="#f0f5fb"
        height="200"
        rx="12"
        width="240"
      />
      <rect
        fill="url(#buyer-gradient)"
        height="200"
        rx="12"
        width="240"
      />
      <rect
        class="dark:fill-[var(--illus-accent-dark-buyer)]"
        fill="#06b6d4"
        height="12"
        opacity="0.15"
        rx="6"
        width="180"
        x="30"
        y="35"
      />
      <text
        class="dark:fill-[var(--illus-text-primary-dark)]"
        fill="#0a1628"
        font-size="12"
        font-weight="600"
        text-anchor="middle"
        x="120"
        y="52"
      >
        July 2026
      </text>
      <g>
        <g>
          <text
            class="dark:fill-[var(--illus-text-secondary-dark)]"
            fill="#4a6080"
            font-size="10"
            font-weight="500"
            opacity="0.6"
            x="50"
            y="65"
          >
            15
          </text>
          <rect
            class="dark:stroke-[var(--illus-accent-dark-buyer)]"
            fill="none"
            height="20"
            opacity="0.4"
            rx="3"
            stroke="#06b6d4"
            stroke-dasharray="2,2"
            stroke-width="1.5"
            width="24"
            x="38"
            y="70"
          />
        </g>
        <g>
          <text
            class="dark:fill-[var(--illus-text-secondary-dark)]"
            fill="#4a6080"
            font-size="10"
            font-weight="500"
            opacity="0.6"
            x="50"
            y="100"
          >
            16
          </text>
          <rect
            class="dark:stroke-[var(--illus-accent-dark-buyer)]"
            fill="none"
            height="20"
            opacity="0.4"
            rx="3"
            stroke="#06b6d4"
            stroke-dasharray="2,2"
            stroke-width="1.5"
            width="24"
            x="38"
            y="105"
          />
        </g>
        <g>
          <text
            class="dark:fill-[var(--illus-text-secondary-dark)]"
            fill="#4a6080"
            font-size="10"
            font-weight="500"
            opacity="0.6"
            x="50"
            y="135"
          >
            17
          </text>
          <rect
            class="dark:stroke-[var(--illus-accent-dark-buyer)]"
            fill="none"
            height="20"
            opacity="0.4"
            rx="3"
            stroke="#06b6d4"
            stroke-dasharray="2,2"
            stroke-width="1.5"
            width="24"
            x="38"
            y="140"
          />
        </g>
      </g>
      <g>
        <g>
          <text
            class="dark:fill-[var(--illus-text-secondary-dark)]"
            fill="#4a6080"
            font-size="10"
            font-weight="500"
            opacity="0.6"
            x="140"
            y="65"
          >
            18
          </text>
          <rect
            class="dark:stroke-[var(--illus-accent-dark-buyer)]"
            fill="none"
            height="20"
            opacity="0.4"
            rx="3"
            stroke="#06b6d4"
            stroke-dasharray="2,2"
            stroke-width="1.5"
            width="24"
            x="128"
            y="70"
          />
        </g>
        <g>
          <text
            class="dark:fill-[var(--illus-text-secondary-dark)]"
            fill="#4a6080"
            font-size="10"
            font-weight="500"
            opacity="0.6"
            x="140"
            y="100"
          >
            19
          </text>
          <rect
            class="dark:stroke-[var(--illus-accent-dark-buyer)]"
            fill="none"
            height="20"
            opacity="0.4"
            rx="3"
            stroke="#06b6d4"
            stroke-dasharray="2,2"
            stroke-width="1.5"
            width="24"
            x="128"
            y="105"
          />
        </g>
        <g>
          <text
            class="dark:fill-[var(--illus-text-secondary-dark)]"
            fill="#4a6080"
            font-size="10"
            font-weight="500"
            opacity="0.6"
            x="140"
            y="135"
          >
            20
          </text>
          <rect
            class="dark:stroke-[var(--illus-accent-dark-buyer)]"
            fill="none"
            height="20"
            opacity="0.4"
            rx="3"
            stroke="#06b6d4"
            stroke-dasharray="2,2"
            stroke-width="1.5"
            width="24"
            x="128"
            y="140"
          />
        </g>
      </g>
      <g
        transform="translate(180, 155)"
      >
        <circle
          class="dark:stroke-[var(--illus-secondary-dark)]"
          cx="0"
          cy="0"
          fill="none"
          opacity="0.6"
          r="12"
          stroke="#d97706"
          stroke-width="1.5"
        />
        <line
          class="dark:stroke-[var(--illus-secondary-dark)]"
          opacity="0.6"
          stroke="#d97706"
          stroke-linecap="round"
          stroke-width="1.5"
          x1="0"
          x2="0"
          y1="0"
          y2="-6"
        />
        <line
          class="dark:stroke-[var(--illus-secondary-dark)]"
          opacity="0.4"
          stroke="#d97706"
          stroke-linecap="round"
          stroke-width="1.5"
          x1="0"
          x2="5"
          y1="0"
          y2="4"
        />
      </g>
      <path
        class="dark:stroke-[var(--illus-accent-dark-buyer)]"
        d="M 152 135 Q 165 145 172 152"
        fill="none"
        opacity="0.3"
        stroke="#06b6d4"
        stroke-dasharray="2,2"
        stroke-width="1"
      />
    </svg>
  </div>
  <div
    class="flex max-w-md flex-col gap-3 sm:gap-4"
  >
    <h2
      class="text-lg font-semibold sm:text-xl text-foreground dark:text-foreground"
      id="_r_u_-title"
    >
      No Bookings Yet
    </h2>
    <p
      class="text-sm sm:text-base leading-relaxed text-muted dark:text-muted"
      id="_r_u_-description"
    >
      Start exploring the marketplace to book your first service.
    </p>
  </div>
</section>
`;

exports[`EmptyBookingHistory > matches snapshot for supplier variant 1`] = `
<section
  aria-describedby="_r_v_-description"
  aria-labelledby="_r_v_-title"
  class="flex flex-col items-center justify-center gap-6 px-4 py-12 sm:px-6 sm:py-16 md:py-20 text-center"
>
  <div
    class="flex w-full max-w-sm justify-center"
  >
    <svg
      aria-label="Empty inbox tray - no bookings received yet"
      class="h-[134px] w-[160px] sm:h-[168px] sm:w-[200px] md:h-[200px] md:w-[240px]"
      height="134"
      role="img"
      viewBox="0 0 240 200"
      width="160"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <lineargradient
          id="supplier-gradient"
          x1="0%"
          x2="0%"
          y1="0%"
          y2="100%"
        >
          <stop
            class="dark:stop-color-[var(--illus-color-supplier-grad-start)]"
            offset="0%"
            stop-color="#0ea5e9"
            stop-opacity="0.05"
          />
          <stop
            class="dark:stop-color-[var(--illus-color-supplier-grad-end)]"
            offset="100%"
            stop-color="#0ea5e9"
            stop-opacity="0.02"
          />
        </lineargradient>
      </defs>
      <rect
        class="dark:fill-[var(--illus-surface-dark)]"
        fill="#f0f5fb"
        height="200"
        rx="12"
        width="240"
      />
      <rect
        fill="url(#supplier-gradient)"
        height="200"
        rx="12"
        width="240"
      />
      <path
        class="dark:stroke-[var(--illus-accent-dark-supplier)]"
        d="M 50 70 L 50 130 Q 50 145 65 145 L 175 145 Q 190 145 190 130 L 190 70 Z"
        fill="none"
        stroke="#0ea5e9"
        stroke-width="2"
      />
      <path
        class="dark:stroke-[var(--illus-accent-dark-supplier)]"
        d="M 50 70 L 55 60 L 55 75"
        fill="none"
        opacity="0.6"
        stroke="#0ea5e9"
        stroke-width="1.5"
      />
      <path
        class="dark:stroke-[var(--illus-accent-dark-supplier)]"
        d="M 190 70 L 185 60 L 185 75"
        fill="none"
        opacity="0.6"
        stroke="#0ea5e9"
        stroke-width="1.5"
      />
      <path
        class="dark:stroke-[var(--illus-accent-dark-supplier)]"
        d="M 55 60 L 185 60"
        fill="none"
        stroke="#0ea5e9"
        stroke-linecap="round"
        stroke-width="2"
      />
      <line
        class="dark:stroke-[var(--illus-accent-dark-supplier)]"
        opacity="0.3"
        stroke="#0ea5e9"
        stroke-dasharray="2,3"
        stroke-width="1"
        x1="100"
        x2="100"
        y1="75"
        y2="140"
      />
      <line
        class="dark:stroke-[var(--illus-accent-dark-supplier)]"
        opacity="0.3"
        stroke="#0ea5e9"
        stroke-dasharray="2,3"
        stroke-width="1"
        x1="140"
        x2="140"
        y1="75"
        y2="140"
      />
      <line
        class="dark:stroke-[var(--illus-accent-dark-supplier)]"
        opacity="0.2"
        stroke="#0ea5e9"
        stroke-dasharray="2,2"
        stroke-width="1"
        x1="60"
        x2="180"
        y1="105"
        y2="105"
      />
      <g
        transform="translate(120, 100)"
      >
        <line
          class="dark:stroke-[var(--illus-secondary-dark)]"
          opacity="0.5"
          stroke="#0891b2"
          stroke-linecap="round"
          stroke-width="1.5"
          x1="-8"
          x2="8"
          y1="0"
          y2="0"
        />
      </g>
      <g>
        <rect
          class="dark:stroke-[var(--illus-secondary-dark)]"
          fill="none"
          height="10"
          opacity="0.2"
          rx="1"
          stroke="#0891b2"
          stroke-width="1"
          transform="rotate(-15 72 85)"
          width="14"
          x="65"
          y="80"
        />
        <rect
          class="dark:stroke-[var(--illus-secondary-dark)]"
          fill="none"
          height="10"
          opacity="0.2"
          rx="1"
          stroke="#0891b2"
          stroke-width="1"
          transform="rotate(12 162 87)"
          width="14"
          x="155"
          y="82"
        />
      </g>
      <circle
        class="dark:stroke-[var(--illus-accent-dark-supplier)]"
        cx="120"
        cy="102"
        fill="none"
        opacity="0.25"
        r="22"
        stroke="#0ea5e9"
        stroke-dasharray="3,3"
        stroke-width="1"
      />
    </svg>
  </div>
  <div
    class="flex max-w-md flex-col gap-3 sm:gap-4"
  >
    <h2
      class="text-lg font-semibold sm:text-xl text-foreground dark:text-foreground"
      id="_r_v_-title"
    >
      Awaiting Your First Booking
    </h2>
    <p
      class="text-sm sm:text-base leading-relaxed text-muted dark:text-muted"
      id="_r_v_-description"
    >
      When customers book your services, they will appear here.
    </p>
  </div>
</section>
`;
